// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toucan captureException Error with cause 1`] = `
{
  "event_id": Any<String>,
  "exception": ObjectContaining {
    "values": ArrayContaining [
      ObjectContaining {
        "stacktrace": ObjectContaining {
          "frames": ArrayContaining [
            ObjectContaining {
              "colno": Any<Number>,
              "filename": Any<String>,
              "function": Any<String>,
              "lineno": Any<Number>,
            },
          ],
        },
        "type": "Error",
        "value": "original error",
      },
      ObjectContaining {
        "stacktrace": ObjectContaining {
          "frames": ArrayContaining [
            ObjectContaining {
              "colno": Any<Number>,
              "filename": Any<String>,
              "function": Any<String>,
              "lineno": Any<Number>,
            },
          ],
        },
        "type": "Error",
        "value": "outer error with cause",
      },
    ],
  },
  "level": "error",
  "logger": "EdgeWorker",
  "platform": "node",
  "sdk": {
    "name": "__name__",
    "version": "__version__",
  },
  "timestamp": Any<Number>,
}
`;

exports[`Toucan captureException captureException: primitive 1`] = `
{
  "event_id": Any<String>,
  "exception": ObjectContaining {
    "values": ArrayContaining [
      ObjectContaining {
        "stacktrace": ObjectContaining {
          "frames": ArrayContaining [
            ObjectContaining {
              "colno": Any<Number>,
              "filename": Any<String>,
              "function": Any<String>,
              "lineno": Any<Number>,
            },
          ],
        },
        "type": "Error",
        "value": "test",
      },
    ],
  },
  "level": "error",
  "logger": "EdgeWorker",
  "platform": "node",
  "sdk": {
    "name": "__name__",
    "version": "__version__",
  },
  "timestamp": Any<Number>,
}
`;

exports[`Toucan captureException captureException: primitive 2`] = `
{
  "event_id": Any<String>,
  "exception": ObjectContaining {
    "values": ArrayContaining [
      ObjectContaining {
        "stacktrace": ObjectContaining {
          "frames": ArrayContaining [
            ObjectContaining {
              "colno": Any<Number>,
              "filename": Any<String>,
              "function": Any<String>,
              "lineno": Any<Number>,
            },
          ],
        },
        "type": "Error",
        "value": "true",
      },
    ],
  },
  "level": "error",
  "logger": "EdgeWorker",
  "platform": "node",
  "sdk": {
    "name": "__name__",
    "version": "__version__",
  },
  "timestamp": Any<Number>,
}
`;

exports[`Toucan captureException captureException: primitive 3`] = `
{
  "event_id": Any<String>,
  "exception": ObjectContaining {
    "values": ArrayContaining [
      ObjectContaining {
        "stacktrace": ObjectContaining {
          "frames": ArrayContaining [
            ObjectContaining {
              "colno": Any<Number>,
              "filename": Any<String>,
              "function": Any<String>,
              "lineno": Any<Number>,
            },
          ],
        },
        "type": "Error",
        "value": "10",
      },
    ],
  },
  "level": "error",
  "logger": "EdgeWorker",
  "platform": "node",
  "sdk": {
    "name": "__name__",
    "version": "__version__",
  },
  "timestamp": Any<Number>,
}
`;

exports[`Toucan captureException object 1`] = `
{
  "event_id": Any<String>,
  "exception": ObjectContaining {
    "values": ArrayContaining [
      ObjectContaining {
        "stacktrace": ObjectContaining {
          "frames": ArrayContaining [
            ObjectContaining {
              "colno": Any<Number>,
              "filename": Any<String>,
              "function": Any<String>,
              "lineno": Any<Number>,
            },
          ],
        },
        "type": "Error",
        "value": "Non-Error exception captured with keys: bar, foo",
      },
    ],
  },
  "level": "error",
  "logger": "EdgeWorker",
  "platform": "node",
  "sdk": {
    "name": "__name__",
    "version": "__version__",
  },
  "timestamp": Any<Number>,
}
`;

exports[`Toucan captureException runtime thrown Error 1`] = `
{
  "event_id": Any<String>,
  "exception": ObjectContaining {
    "values": ArrayContaining [
      ObjectContaining {
        "stacktrace": ObjectContaining {
          "frames": ArrayContaining [
            ObjectContaining {
              "colno": Any<Number>,
              "filename": Any<String>,
              "function": Any<String>,
              "lineno": Any<Number>,
            },
          ],
        },
        "type": "SyntaxError",
        "value": "Unexpected token a in JSON at position 0",
      },
    ],
  },
  "level": "error",
  "logger": "EdgeWorker",
  "platform": "node",
  "sdk": {
    "name": "__name__",
    "version": "__version__",
  },
  "timestamp": Any<Number>,
}
`;

exports[`Toucan captureMessage sends correct body to Sentry 1`] = `
{
  "event_id": Any<String>,
  "level": "info",
  "logger": "EdgeWorker",
  "message": "test",
  "platform": "node",
  "sdk": {
    "name": "__name__",
    "version": "__version__",
  },
  "timestamp": Any<Number>,
}
`;

exports[`Toucan general options invalid URL does not fail 1`] = `
{
  "event_id": Any<String>,
  "level": "info",
  "logger": "EdgeWorker",
  "message": "test",
  "platform": "node",
  "request": {
    "headers": {},
    "query_string": "query%",
    "url": "garbage",
  },
  "sdk": {
    "name": "__name__",
    "version": "__version__",
  },
  "timestamp": Any<Number>,
}
`;
